log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-deployment
  labels:
    app: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
      - name: log-output-container
        image: log-output-app:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
      restartPolicy: Always
