log-output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
  - name: http
    protocol: TCP
    port: 1234
    targetPort: 8000
